--- a/main.css
+++ b/main.css
@@ -116,7 +116,7 @@ h2, h3, p, table, li {
 
 /* Title style */
 .title_card {
-  background-image: url("img./title_card.png");
+  background-image: url("img/title_card.png");
   background-size: 100% 100%;
   margin-top: 20px;
   padding-bottom: 10px;
