--- a/main.css
+++ b/main.css
@@ -53,9 +53,9 @@ h2, h3, p, table, li {
 
 /* Blocks */
 .block {
-  background-color: #ADD8E6;
+  background-color: #cce7f0;
   border-radius: 5px;
-  border-color: #318CE7;
+  border-color: #65a3e0;
   border-style: solid;
   border-width: 1px;
 }
