--- a/alt.css
+++ b/alt.css
@@ -150,11 +150,24 @@ h2, h3, p, table, li {
   .title h1{	
     font-size: 50px;
   }
-  
+  .right_card {
+	display: none;
+  }
 }
 
-.right_card {
-	display: none;
-  }  
+  
 
+@media only screen and (min-width: 600px) {
+	.right_card {
+	  display: inline-block;
+	  width: 50%;
+	  color: white;
+	  margin-left: 5%;
+	}
+	.left_card {
+	  margin-left: 5%;
+	  display: inline-block;
+	}
+		
+}
 
