--- a/alt.css
+++ b/alt.css
@@ -47,10 +47,6 @@ h1, h2, h3, p, table, li {
 }
 
 
-.thumb img{
-  padding-right: 3%;
-}
-
 .frame, .frame_grey {
   width: 100%;
   padding-bottom: 50px;
@@ -178,3 +174,77 @@ h1, h2, h3, p, table, li {
  
 
 
+
+
+
+/* Hover thumbnails */
+.container{
+  margin-left: 10%;	
+}
+
+.content {
+  position: relative;
+  float: left;
+  margin-right: 3%;
+}
+
+.content .content-overlay {
+
+  background: rgba(0,0,0,0.7);
+  position: absolute;
+  width: 220px;
+  height: 220px;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.content:hover .content-overlay{
+  opacity: 1;
+}
+
+.content-image{
+  width: 220px;
+  height: 220px;
+}
+
+.content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.content:hover .content-details{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+.content-details h3{
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+}
+
+.content-details p{
+  color: #fff;
+  font-size: 0.8em;
+}
+
+.fadeIn-bottom{
+  top: 80%;
+}
