--- a/alt.css
+++ b/alt.css
@@ -1,7 +1,27 @@
+body {
+  padding-bottom: 3%;
+  background-color: white;  
+  background-image: url("img/test.png");
+}
+
+html {
+  scroll-behavior: smooth;	
+}
+
+.tableauPlaceholder {
+  border: solid;
+  
+
+}
+
+.tableauViz {
+  margin-bottom: 0px;
+
+}
 
 /* Link style */
 a:link, a:visited {
-  color: #232323;
+color: #232323;	
   text-decoration: none;
 }
 
@@ -23,36 +43,205 @@ a[target="_blank"]::after {
   color: #f3883c;
 }
 
-/* Content style*/
-h1, h2, h3, p, table, li {
-  font-family: 'Source Sans Pro';
-  line-height: 160%;
+a img:hover {
+  opacity: 80%;
 }
 
-.page_title, .subtitle{
-  text-align: left;
-  margin-left: 10%;
-  margin-top: 50px;
-}	
+.button {
+  height: 30px;
+  width: fit-content;
+  padding-left: 1.5%;
+  padding-right: 1.5%;
+  background-color: #E86100;
+  border-radius: 50px;
+
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  
+  font-family: Lato;
+  font-size: 16px;
+  color: white;
+}
+
+.button p{
+  color: white;
+  font-family: 'Lato';
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.button:hover {
+  background-color: #f3883c;
+  cursor: pointer;
+}
 
 
-.writing, .writing_grey, .thumb {
-  text-align: left;
-  margin-left: 10%;
-  color: #232323;
-  width: 56%;
-  text-align:justify;
-  font-size: 17px;
-}	
+/* Content style*/
+.content {
+  margin-left: 19%;
+  width: 56%; 
+  border-collapse: collapse;
+}
 
-.writing_grey {
-  color: #737373;	
+table {
+  font-family: 'Lato';
+  line-height: 160%;
+  font-size: 14px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 9%;
+  width: 80%;
+  
+  
+}
+
+table th, table td{
+  	padding: 8px;
+	border: 1px solid #cdcdcd;
+}
+
+ p, li {
+     font-family: "Lato";
+ line-height: 160%;
+}
+
+p {
+  color: #232323;	
+}
+
+h1, h2, h3 {
+ color: black;
+ font-weight: bold;
+ font-family: "Lato";
+ line-height: 160%;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 20px;
 }
 
 .tech {
   font-family: Courier New;	
 }
 
+.my_tooltip {
+  border-bottom: 1px dotted #232323;
+  position: relative;
+}
+
+	
+
+.my_tooltip .tooltiptext {
+color: #232323;	
+  visibility: hidden;
+  background-color: white;
+  font-size: 12px;
+  line-height: 150%;
+
+  text-align: left;
+  padding: 5px 5px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  
+
+  position: absolute;
+  z-index: 1;
+  width: 200px;
+  top: 100%;
+  left: 50%;
+  margin-left: -100px; 
+  
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.my_tooltip .tooltiptext::after {
+  content: " ";
+  position: absolute;
+  bottom: 100%;  /* At the top of the tooltip */
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
+
+.my_tooltip:hover {
+  color:  #f3883c;
+  border-color:  #f3883c;
+  cursor: default;
+}
+
+.my_tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+.page_title, .subtitle {
+  text-align: left;
+  margin-top: 50px;
+}	
+
+
+.writing, .writing_grey, .thumb, .item_list {
+  text-align: left;
+  text-align:left;
+  font-size: 16px;
+}	
+
+
+.writing_grey {
+  color: #737373;	
+}
+
+.article_head {
+
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: space-between;
+   align-items: stretch;
+
+
+}
+
+.head_text{
+  flex: 2;
+  margin-right: 2%;
+  
+}
+.head_text .writing, .head_text .subtitle {
+   margin-left: 0%;
+   width: 100%;  
+   margin-top: 0px;   
+}
+.head_text .button {
+  margin-left: 0%;	
+}
+
+.head_image {
+  flex: 1;
+  margin-top: 0px;
+  margin-left: 0%;
+}
+
+@media only screen and (max-width: 1000px) {
+  .head_image {
+	flex: 0;
+  }
+
+}
+
+.scroll_arrow {
+  margin-left: 45%;
+
+}
 
 .frame, .frame_grey {
   width: 100%;
@@ -63,7 +252,21 @@ h1, h2, h3, p, table, li {
 
 .frame_grey {
   background-color: #f0f0f0;
+  border-top: solid 1px;
+  border-bottom: solid 1px;
+  border-color: #e3e3e3;
 }
+.article_image {
+  width: 100%;
+  display: flex;	
+  justify-content: center;
+}
+
+.article_image img{
+   width: 45%;
+   margin-right: 2.5%;   
+}
+
 
 /* Blocks */
 .block {
@@ -75,184 +278,104 @@ h1, h2, h3, p, table, li {
 }
 
 /* Nav Bar style */
+
+
 .nav_bar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: white;
+    background-color: transparent;
+    overflow: hidden; 
+	margin-right: 10%;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	height: 40px;
+
 }
 
-.nav_bar li {
+.nav_bar a {
+  width: 60px;
   float: right;
-}
-
-@media only screen and (max-width: 600px) {
-  .nav_bar {
-	display: inline-block;
-	margin: auto;
-  }
-
-}
-
-.nav_bar li a {
-  display: block;
-  color: black;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
+  height: 80%;
+  margin-right: 10px;
+  
 }
 
-.nav_bar li a:hover {
-  color: white;
+.nav_bar a p {
+  font-size: 16px;
+}
+
+
+/* Change the color of links on hover */
+.nav_bar a:hover {
   background-color: #f3883c;
 }
 
+.nav_bar a:hover p{
+  color: white;
+}
 
 
 
 
 /* Title style */
 
-.title_link:link, .title_link:visited{
-  color: black;
-}
-
-.title_card {
-  margin-top: 30px;
-}
-
-.title_card h3 {
-  text-align: center;
-  font-size: 20px;  
-}
-
-.title_card h2 {
-  font-size: 20px;  
-}
 
 .title {
-  padding: 20px;
-  margin: auto;
-  display: table;
+  text-align: left;
+  margin-top: 80px;
+  
 }
 
 .title h1 {
-  font-size: 25px;
+  font-size: 43px;
   color: black;
   display: inline;
-  padding: 10px;
 }
 
 .footer {
-	margin: auto;
-	display: table;
-	margin-top: 50px;
+
+	margin-top: 20px;
 	margin-bottom: 50px;
 }
 
 .icon {
-	margin-left: 10px;
+
 	margin-right: 10px;
 	display: inline;
 }
 
+/* Cards */
 
-@media only screen and (max-width: 600px) {
-  .right_card {
-	display: none;
-  }
+
+
+
+/* Carousel */
+
+#myCarousel {
+   width: 60%;
+   margin-left: 19%;
+   overflow: visible;
 }
 
-.left_card .profile {
-  display: table;
-  margin: auto;
-}
-
-.right_card, .left_card {
-	  display: inline-block;	  
-	  margin-left: 5%;
-	  vertical-align: top;
-	}
-.right_card {
-  width: 70%;
-}
- 
-
-
-
-
-
-/* Hover thumbnails */
-.container{
-  margin-left: 10%;	
-}
-
-.content {
-  position: relative;
-  float: left;
-  margin-right: 3%;
+#myCarousel .item img{
+  height: 350px;
+  object-fit: contain;
+  margin: 0 auto;
   
 }
 
-.content .content-overlay {
-  
-  overflow: hidden;
-  background: rgba(0,0,0,0.7);
-  position: absolute;
-  width: 220px;
-  height: 220px;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
+.carousel-control.left {
+  margin-left: -25px;
 }
 
-.content:hover .content-overlay{
-  opacity: 1;
+.carousel-control.right {
+  margin-right: -25px;
 }
 
-.content-image{
-  width: 220px;
-  height: 220px;
+.carousel-control.left, .carousel-control.right {
+   background-image:none !important;
+   filter:none !important;
 }
-
-.content-details {
-  position: absolute;
-  text-align: center;
-  padding-left: 1em;
-  padding-right: 1em;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.content:hover .content-details{
-  top: 50%;
-  left: 50%;
-  opacity: 1;
-}
-
-.content-details h3{
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 0.15em;
-  margin-bottom: 0.5em;
-  text-transform: uppercase;
-}
-
-.content-details p{
-  color: #fff;
-  font-size: 0.8em;
-}
-
-.fadeIn-bottom{
-  top: 80%;
-}
+.carousel .carousel-indicators {position: relative; bottom: -10px; margin-bottom: 30px;}
+.carousel .carousel-indicators li {border-color: grey;}
+.carousel .carousel-indicators li.active {background-color: grey;}
