--- a/alt.css
+++ b/alt.css
@@ -83,7 +83,7 @@ a img:hover {
 .content {
   margin-left: 19%;
   width: 56%; 
-  border-collapse: collapse;
+  
 }
 
 table {
@@ -94,7 +94,7 @@ table {
   margin-bottom: 40px;
   margin-left: 9%;
   width: 80%;
-  
+  border-collapse: collapse;
   
 }
 
@@ -344,8 +344,6 @@ color: #232323;
 	display: inline;
 }
 
-/* Cards */
-
 
 
 
@@ -379,3 +377,19 @@ color: #232323;
 .carousel .carousel-indicators {position: relative; bottom: -10px; margin-bottom: 30px;}
 .carousel .carousel-indicators li {border-color: grey;}
 .carousel .carousel-indicators li.active {background-color: grey;}
+
+/* Card */
+.card-title {
+	font-size: 17px;
+}
+
+.card {
+	height: 100%;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+	margin-bottom: 10px;
+}
