--- a/alt.css
+++ b/alt.css
@@ -131,12 +131,38 @@ h3 {
   font-family: Courier New;	
 }
 
+.highlight {
+  text-decoration: underline;
+  text-decoration-color: #E86100;
+  text-decoration-thickness: 2.5px;
+}
+
 .my_tooltip {
   border-bottom: 1px dotted #232323;
   position: relative;
 }
 
+.banner {
+	position: relative;
+	overflow: hidden;
 	
+}
+
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.banner .writing, .banner .title h1, .banner .subtitle {
+	color: black;
+}
+
 
 .my_tooltip .tooltiptext {
 color: #232323;	
@@ -243,7 +269,7 @@ color: #232323;
 
 }
 
-.frame, .frame_grey {
+.frame, .frame_grey, .frame_color {
   width: 100%;
   padding-bottom: 50px;
   display: table;
@@ -255,7 +281,20 @@ color: #232323;
   border-top: solid 1px;
   border-bottom: solid 1px;
   border-color: #e3e3e3;
+
 }
+
+.frame_color {
+  background-color: #010e16;
+}
+
+.frame_color .writing, .frame_color .page_title{
+  color: white;
+}
+.frame_color .card .writing{ 
+  color: black;
+}
+
 .article_image {
   width: 100%;
   display: flex;	
