--- a/alt.css
+++ b/alt.css
@@ -143,25 +143,13 @@ h3 {
 }
 
 .banner {
-	position: relative;
-	overflow: hidden;
-	
+
 }
-
-
-.video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-
 
 .banner .writing, .banner .title h1, .banner .subtitle {
 	color: black;
 }
+
 
 
 .my_tooltip .tooltiptext {
@@ -285,11 +273,12 @@ color: #232323;
 }
 
 .frame_color {
-  background-color: #010e16;
+  background-color: #000d14;
 }
 
-.frame_color .writing, .frame_color .page_title{
-  color: white;
+.frame_color .writing, .frame_color .page_title, .frame_color .subtitle{
+  color: #f5f5f5;
+  
 }
 .frame_color .card .writing{ 
   color: black;
